componente_saludo_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservicio-saludo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app.kubernetes.io/instance: microservicio-saludo
  namespace: app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: microservicio-saludo
                port:
                  number: 80
            path: /app(/|$)(.*)
            pathType: ImplementationSpecific
